# open-dictate

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: CNAME  README.md  index.html  llms.txt  script.js  sitemap.xml  styles.css
scripts/: build-release.ps1  bump-version.ps1  install.ps1  read-version.ps1  uninstall.ps1
src/: __init__.py  __main__.py  app.py  audio_recorder.py  config.py  hotkey_manager.py  key_codes.py  launcher.py  main.py  model_downloader.py  permissions.py  recording_store.py  text_inserter.py  text_processor.py  transcriber.py  tray_controller.py  version.py
tests/unit/: test_launcher.py
website/: README.md  index.html  styles.css
