[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-dictate"
version = "0.1.0"
description = "Local, private voice dictation for Windows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "tucaz"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "pyaudio>=0.2.14",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "Pillow>=10.2.0",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
]

[project.scripts]
open-dictate = "src.main:main"
open-dictate.exe = "src.main:main"

[project.urls]
Homepage = "https://github.com/tucaz/open-dictate"
Repository = "https://github.com/tucaz/open-dictate"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = []
